fix: :lipstick: update scrollbar color

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -293,6 +293,6 @@ a:hover {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #F6F6F2;
+  background: #BEBEBA;
   border-radius: 7px;
 }
